add tailwind peer dependency

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ts-jest": "^29.1.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "tailwindcss": "^3"
   }
 }
